Updated index.html page to make it better

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       </div>
       <div class="mid">
           <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Fitness calculator</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="#"><b>Home</b></a></li>
+            <li><a href="#"><b>About us</b></a></li>
+            <li><a href="#"><b>Fitness calculator</b></a></li>
+            <li><a href="#"><b>Contact us</b></a></li>
+            /*bold will make your content more effective */
           </ul>
       </div>
       <div class="right">
