test.txt added and index.html modified

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img src="C:\Users\user\Desktop\p.jpg" alt="">
+    <!-- <img src="C:\Users\user\Desktop\p.jpg" alt=""> -->
     <div class="header">
       <div class="left">
-     <img src="C:\Users\user\Desktop\photo.png" alt="">
+     <!-- <img src="C:\Users\user\Desktop\photo.png" alt=""> -->
      <div class="font">
        Saloni fitness
      </div>
